--- a/.github/workflows/name: Streamlit Auto Run  on:   schedule:     - cron: '0 * * * *'  # Every hour at minute 0 (UTC)   push:     branches:       - main  jobs:   streamlit-run:     runs-on: ubuntu-latest      steps:     - name: Checkout repo       uses: actions/checkout@v4      - name: Set up Python       uses: actions/setup-python@v4       with:         python-version: '3.11'      - name: Install dependencies       run: |         python -m pip install --upgrade pip         pip install -r requirements.txt      - name: Run Streamlit app       env:         HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}         HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}         HOPSWORKS_USERNAME: ${{ secrets.HOPSWORKS_USERNAME }}         HOPSWORKS_PASSWORD: ${{ secrets.HOPSWORKS_PASSWORD }}       run: |         streamlit run app/streamlit_app.py --server.headless truedeploy.yml
+++ b/.github/workflows/name: Streamlit Auto Run  on:   schedule:     - cron: '0 * * * *'  # Every hour at minute 0 (UTC)   push:     branches:       - main  jobs:   streamlit-run:     runs-on: ubuntu-latest      steps:     - name: Checkout repo       uses: actions/checkout@v4      - name: Set up Python       uses: actions/setup-python@v4       with:         python-version: '3.11'      - name: Install dependencies       run: |         python -m pip install --upgrade pip         pip install -r requirements.txt      - name: Run Streamlit app       env:         HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}         HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}         HOPSWORKS_USERNAME: ${{ secrets.HOPSWORKS_USERNAME }}         HOPSWORKS_PASSWORD: ${{ secrets.HOPSWORKS_PASSWORD }}       run: |         streamlit run app/streamlit_app.py --server.headless truedeploy.yml
@@ -1,8 +1,9 @@
 name: Streamlit Auto Run
 
 on:
+  workflow_dispatch:   # ← Manual run enable
   schedule:
-    - cron: '0 * * * *'  # Every hour at minute 0 (UTC)
+    - cron: '0 * * * *'
   push:
     branches:
       - main
@@ -12,24 +13,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run Streamlit app
-      env:
-        HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
-        HOPSWORKS_USERNAME: ${{ secrets.HOPSWORKS_USERNAME }}
-        HOPSWORKS_PASSWORD: ${{ secrets.HOPSWORKS_PASSWORD }}
-      run: |
-        streamlit run app/streamlit_app.py --server.headless true
+      - name: Run Streamlit app
+        env:
+          HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+          HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
+          HOPSWORKS_USERNAME: ${{ secrets.HOPSWORKS_USERNAME }}
+          HOPSWORKS_PASSWORD: ${{ secrets.HOPSWORKS_PASSWORD }}
+        run: |
+          streamlit run app/streamlit_app.py --server.headless true
+
